test/expected/declare_uz.out
declare x as unsigned size_t
        ^
9: error: "unsigned" is illegal for typedef
